# DIP-HW05

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
src/: BaseProcessor.cpp  BaseProcessor.h  EdgeDetector.cpp  EdgeDetector.h  common.cpp  common.h  main.cpp
src/filters/: BaseFilters.cpp  BaseFilters.h  GradientFilters.cpp  GradientFilters.h  LaplaceFilter.cpp  LaplaceFilter.h  LoGFilter.cpp  LoGFilter.h  MarrHildrethFilters.cpp  MarrHildrethFilters.h  PrewittFilter.cpp  PrewittFilter.h  RobertsFilter.cpp  RobertsFilter.h  ScharrFilter.cpp  ScharrFilter.h  SobelFilter.cpp  SobelFilter.h
